tests/e2e/semantics/nested_types7.error
Error: syntax error in story at line 2, column 9

2|      return [["foo"]]
               ^

E0102: `string[][]` can't be implicitly converted to expected return type `int[][]`.
